crates/monochange_analysis/tests/snapshots/cargo_semantic_analysis__analyze_changes_reports_cargo_public_api_and_manifest_diffs.snap
---
source: crates/monochange_analysis/tests/cargo_semantic_analysis.rs
expression: analysis
---
{
  "frame": "WorkingDirectory",
  "detectionLevel": "signature",
  "packageAnalyses": {
    "core": {
      "packageId": "core",
      "packageRecordId": "cargo:crates/core/Cargo.toml",
      "packageName": "core",
      "ecosystem": "cargo",
      "analyzerId": "cargo/public-api",
      "changedFiles": [
        "Cargo.toml",
        "src/lib.rs"
      ],
      "semanticChanges": [
        {
          "category": "public_api",
          "kind": "added",
          "itemKind": "struct",
          "itemPath": "Greeter",
          "summary": "struct `Greeter` added",
          "filePath": "src/lib.rs",
          "beforeSignature": null,
          "afterSignature": "pub struct Greeter ;"
        },
        {
          "category": "public_api",
          "kind": "modified",
          "itemKind": "function",
          "itemPath": "greet",
          "summary": "function `greet` modified",
          "filePath": "src/lib.rs",
          "beforeSignature": "fn greet () -> & 'static str",
          "afterSignature": "fn greet (name : & str) -> String"
        },
        {
          "category": "dependency",
          "kind": "added",
          "itemKind": "dependency",
          "itemPath": "tracing",
          "summary": "dependency `tracing` added",
          "filePath": "Cargo.toml",
          "beforeSignature": null,
          "afterSignature": "[dependencies] 0.1"
        },
        {
          "category": "metadata",
          "kind": "added",
          "itemKind": "feature",
          "itemPath": "feature.cli",
          "summary": "feature `feature.cli` added",
          "filePath": "Cargo.toml",
          "beforeSignature": null,
          "afterSignature": ""
        },
        {
          "category": "metadata",
          "kind": "modified",
          "itemKind": "feature",
          "itemPath": "feature.default",
          "summary": "feature `feature.default` modified",
          "filePath": "Cargo.toml",
          "beforeSignature": "",
          "afterSignature": "cli"
        },
        {
          "category": "metadata",
          "kind": "modified",
          "itemKind": "manifest_field",
          "itemPath": "package.edition",
          "summary": "manifest_field `package.edition` modified",
          "filePath": "Cargo.toml",
          "beforeSignature": "2021",
          "afterSignature": "2024"
        }
      ],
      "warnings": []
    }
  },
  "warnings": []
}
